@@ -5,7 +5,8 @@ node('maven') {
    	def IT_PROJECT = "reportengine-it"
    	def PORT = 8080
    	def APP_NAME = "report-renderer"
-   	
+
+	sh "export MAVEN_OPTS='-XX:MaxPermSize=512M  -Xms1024m -Xmx1024m'"   	
 
    	stage ('Build') {
    		git branch: 'master', url: 'https://github.com/vargadan/report-renderer.git'
